Fix bug with UIs v3 on Firefox
Lines were not breaking in the elements

--- a/css/UIv3.css
+++ b/css/UIv3.css
@@ -8,6 +8,7 @@
 	font-family: "Cascadia Mono", "Segoe UI Mono", "Liberation Mono", Menlo, Monaco, Consolas, monospace;
 	overflow-wrap: break-word;
 	word-wrap: break-word;
+	word-break: break-all;
 	overflow: hidden;
 	display: inline-block;
 
